--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -280,6 +280,23 @@
 
 /* ---------------------------------Detalles propiedades modal Section --------------------------------- */
 
+#propertyDetailsContent .row {
+    margin-top: 1rem;
+}
+
+#propertyDetailsContent .col-md-6 {
+    padding: 1rem;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+}
+
+#propertyDetailsContent .btn {
+    padding: 0.8rem 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
 #propertyDetailsContent{
     overflow: hidden;
 }
@@ -343,9 +360,10 @@
 
 /* Property Title */
 #propertyDetailsContent h3 {
-    font-size: 1.5rem;
-    color: #333;
+    font-size: 2rem;
+    color: #71C6D4;
     margin: 1rem 0 0.5rem;
+    font-weight: bold;
 }
 
 /* Price and Details */
