--- a/css/stylesInicio.css
+++ b/css/stylesInicio.css
@@ -203,6 +203,9 @@
     transform: scale(1.1);
 }
 
+.imgHistoriaHome img{
+    width: 60%;
+}
 
 /* •----------------Servicio Section----------------• */
 
