--- a/css/stylesInicio.css
+++ b/css/stylesInicio.css
@@ -196,6 +196,10 @@
     transition: transform 0.3s ease;
 }
 
+.imgHistoriaHome{
+    display: flex;
+}
+
 .historiaHome a:hover{
     color: white;
     background-color:#e0a800 ;
