--- a/css/stylesNosotros.css
+++ b/css/stylesNosotros.css
@@ -5,7 +5,7 @@ main {
 /* Hero Section */
 .hero-nosotros {
     background: url('/images/vistaNosotros/CasaLD-08.jpeg') center/cover no-repeat;
-    height: 70vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,6 +28,7 @@ main {
     z-index: 2;
     color: white;
     text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    padding: 3rem;
 }
 
 .hero-nosotros h1 {
@@ -89,6 +90,16 @@ main {
     object-fit: cover;
 }
 
+@media screen and (max-width: 576px) {
+ 
+
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+ 
+}
+
+
 /* Overlay para mejorar contraste del texto */
 .historia-section .content-overlay {
     position: relative;
@@ -106,7 +117,9 @@ main {
     margin-bottom: 3rem;
     background-color: #0000008e;
     border-radius: 10px;
+    
 }
+
 
 /* Línea de tiempo */
 .timeline {
@@ -150,6 +163,7 @@ main {
     color: #71C6D4;
     margin-bottom: 0.5rem;
    font-weight: bold;
+   
 }
 
 .timeline-content p {
@@ -206,8 +220,9 @@ main {
         padding: 3rem 1rem;
     }
 
-    .timeline {
-        gap: 1.5rem;
+    .timeline::before {
+      
+        background-color: #00000000;
     }
 
     .timeline-content {
@@ -222,6 +237,10 @@ main {
     .timeline-content p {
         font-size: 0.9rem;
     }
+    .timeline-dot{
+        display: none;
+    }
+    
 }
 
 
@@ -233,6 +252,7 @@ main {
 .valores-section {
     padding: 3rem 1rem;
     background: #5A4E4E;
+   
 }
 
 .valores-section h2 {
@@ -248,6 +268,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
     text-align: center;
+   
 }
 
 .valor-card {
@@ -279,6 +300,14 @@ main {
 .valor-card p {
     font-size: 1rem;
 }
+
+@media (max-width: 768px) {
+   #row-masInfo{
+    row-gap: 2rem;
+   }
+    
+}
+
 
 
 /* Swiper Custom Styles */
@@ -361,8 +390,6 @@ main {
     opacity: 1;
     transform: scale(1.2); /* Resalta la posición activa */
 }
-
-
 
 
 
