changes filter, images, navbar

--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -7,7 +7,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fdfdfd;
-    /* Fondo claro para uniformidad */
 }
 
 main {
@@ -26,15 +25,13 @@ main {
     z-index: 1020;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #887878 !important;
-    
-
 }
 
 
 
 .navbar-brand img {
-   width:   200px;
-   height: auto;
+    width: 200px;
+    height: auto;
 }
 
 .nav-link {
@@ -51,7 +48,6 @@ main {
 
 .nav-link:hover {
     color: #71C6D4;
-
     transform: translateY(-3px);
 }
 
@@ -66,6 +62,46 @@ main {
 .navbar-toggler-icon {
     color: #71C6D4 !important;
 }
+
+
+.dropdown-menu {
+    display: none;
+    background-color: #887878;
+    border: 1px solid #ccc;
+}
+
+.dropdown-menu.show {
+    display: block !important;
+    animation: fadeInDown 0.3s ease-in-out;
+}
+
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.dropdown-item {
+    color: #fff !important;
+    font-weight: bold !important;
+}
+
+.dropdown-item:hover {
+    background-color: #71C6D4;    
+}
+
+.show {
+    color: #71C6D4 !important;
+}
+
+
 
 
 
@@ -96,7 +132,7 @@ footer a {
 }
 
 footer a:hover {
-    color: #e0a800;
+    color: #ffcc80
 }
 
 .social-icons i {
@@ -106,7 +142,7 @@ footer a:hover {
 
 .social-icons i:hover {
     transform: translateY(-3px);
-    color: #e0a800;
+    color: #ffcc80
 }
 
 #telefonoFooter a {
@@ -115,7 +151,7 @@ footer a:hover {
 }
 
 #telefonoFooter a:hover {
-    color: #e0a800;
+    color: #ffcc80
 }
 
 .linkSenestrariDev {
@@ -190,7 +226,7 @@ footer a:hover {
     #espacioFotoMobile img {
         display: block;
         margin-bottom: 2rem;
-       
+
 
     }
 
@@ -369,27 +405,44 @@ html {
 
 .whatsapp-button {
     position: fixed;
-    bottom: 20px; /* Ajusta la distancia desde el borde inferior */
-    right: 20px;  /* Ajusta la distancia desde el borde derecho */
-    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+    bottom: 20px;
+    /* Ajusta la distancia desde el borde inferior */
+    right: 20px;
+    /* Ajusta la distancia desde el borde derecho */
+    z-index: 1000;
+    /* Asegura que esté por encima de otros elementos */
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px; /* Tamaño del contenedor */
+    width: 60px;
+    /* Tamaño del contenedor */
     height: 60px;
-    background-color: #25D366; /* Color de fondo de WhatsApp */
-    border-radius: 50%; /* Forma circular */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+    background-color: #25D366;
+    /* Color de fondo de WhatsApp */
+    border-radius: 50%;
+    /* Forma circular */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Sombra */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .whatsapp-button:hover {
-    transform: scale(1.1); /* Efecto de zoom al pasar el cursor */
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
+    transform: scale(1.1);
+    /* Efecto de zoom al pasar el cursor */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    /* Sombra más intensa */
 }
 
 .whatsapp-icon {
-    width: 45px; /* Tamaño del icono */
+    width: 45px;
+    /* Tamaño del icono */
     height: 45px;
     /*filter: invert(1) !important;  */
+}
+
+
+/* generales  */
+
+.detalleProp{
+    color: #000000 !important;
 }
