--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -35,7 +35,7 @@
 
 #propiedades .swiper-container {
     width: 100%;
-    height: 300px;
+    height: auto;
     /* Altura ajustable del carousel */
     border-bottom: 1px solid #dddddd;
 }
@@ -77,10 +77,13 @@
     color: #ffffff;
     border: none;
     transition: transform 0.3s ease, background-color 0.3s ease;
+    font-weight: bold;
+    transition: 0.3s ease;
 }
 
 #propiedades .btn:hover {
-    background-color: #e0a800;
+    text-shadow: 2px 5px 8px #000000;
+    background-color: #ffcc80 !important;
     transform: translateY(-3px);
 }
 
@@ -88,10 +91,13 @@
 #propiedades .btn-primary {
     background-color: #71C6D4;
     color: #000000;
+    transition: 0.3s ease;
+    font-weight: bold;
 }
 
 #propiedades .btn-primary:hover {
-    background-color: #e0a800;
+    text-shadow: 2px 5px 8px #000000;
+    background-color: #ffcc80 !important;
 }
 
 #propiedades .btn-secondary {
@@ -106,14 +112,14 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-    color: #ffffff;
+    color: #ffcc80 !important;
     margin-top: -50px;
 }
 
 
 
 .botonesSwiperDes div {
-    background-color: #5a4e4e6e !important;
+    background-color: #00000067 !important;
     padding: 1rem;
     border-radius: 50%;
     overflow: hidden;
@@ -233,6 +239,11 @@
 
 #propertyDetailsContent ul li {
     list-style: none !important;
+    color: #000000;
+}
+
+#propertyDetailsContent i {
+    color: #71C6D4;
 }
 
 
@@ -272,7 +283,7 @@
 /* Swiper Container */
 #propertyDetailsContent .swiper-container {
     width: 100%;
-    height: 300px;
+    height: auto;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -339,7 +350,8 @@
 }
 
 #propertyDetailsContent .btn-secondary:last-child:hover {
-    background-color: #e0a800;
+    text-shadow: 2px 5px 8px #000000;
+    background-color: #ffcc80 !important;
 }
 
 /* Responsive Styles */
@@ -375,6 +387,47 @@
         display: none;
     }
 }
+
+/* Estilo específico para los botones del Swiper en el modal */
+#propertyDetailsContent .swiper-button-next,
+#propertyDetailsContent .swiper-button-prev {
+    background-color: rgba(0, 0, 0, 0.6) !important; 
+    color: #ffcc80; /* Color del icono */
+    border-radius: 50%; /* Forma circular */
+    width: 40px; /* Tamaño del botón */
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+#propertyDetailsContent .swiper-button-next:hover,
+#propertyDetailsContent .swiper-button-prev:hover {
+    background-color: #71c6d4; /* Cambia el fondo al pasar el cursor */
+    transform: scale(1.1); /* Efecto de zoom */
+}
+
+/* Posicionar los botones */
+#propertyDetailsContent .swiper-button-next {
+    right: -5px; /* Ajusta la posición desde el borde derecho */
+    top: 35%; /* Centra verticalmente */
+    
+}
+
+#propertyDetailsContent .swiper-button-prev {
+    left: -5px; /* Ajusta la posición desde el borde izquierdo */
+    top: 35%; /* Centra verticalmente */
+   
+}
+
+/* Asegurarse de que no afecten otros Swipers */
+#propertyDetailsContent .swiper-button-next,
+#propertyDetailsContent .swiper-button-prev {
+    z-index: 10; /* Asegura que estén encima de las imágenes */
+    position: absolute; /* Asegura que se posicionen dentro del contenedor del Swiper */
+}
+
 
 
 /* --------------------------------- Hero Section --------------------------------- */
@@ -542,10 +595,12 @@
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: 0.3s ease;
 }
 
 #contacto button:hover {
-    background-color: #e0a800;
+    text-shadow: 2px 5px 8px #000000;
+    background-color: #ffcc80 !important;
     transform: translateY(-3px);
 }
 
