--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -450,7 +450,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/images/carouselHome/CasaLD-01.jpeg');
+    background-image: url('../images/carouselHome/CasaLD-01.jpeg');
     /* Cambia la URL por tu imagen */
     background-size: cover;
     background-position: center;
